<resources>
    <string name="app_name">Learnado</string>
    <string name="profilebackground">profileBackground</string>
    <string name="profileavatar">profileAvatar</string>
    <string name="profilename">profileName</string>
    <string name="userlocation">userLocation</string>
    <string name="proflename">profleName</string>
    <string name="location">location</string>
    <string name="viewswitch">viewSwitch</string>
    <string name="viewswitch">viewSwitch</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="upcoming_lessons">Upcoming Lessons</string>
    <string name="messages">Messages</string>
    <string name="changes_in_lessons">Changes in Lessons</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="payment_setup">Payment Setup</string>
    <string name="timeBooking">Time</string>
    <string name="back_to_main">Back To Main</string>
</resources>
